# rust-cdumay_rest_client

./: .gitignore  Cargo.toml  README.md
src/: client.rs  errors.rs  lib.rs
